ICE-9531 fix to always render pinning controls below the column name; fix to invoke resizeScrolling() when pinning and when unpinning a column, in order to keep columns aligned
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@52456 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -79,6 +79,10 @@
     position: relative;
 }
 
+.ui-datatable .ui-header-right.ui-datatabe-pinning {
+    display: block;
+}
+
 .ui-sortable-control {
     vertical-align: middle;
     cursor:pointer;
